--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,6 +1,12 @@
 {% extends 'base.html' %}
 {% block title %}Homepage{% endblock %}
 {% block content %}
+{% if user.is_authenticated %}
+<p>User: {{ user.username }} logged in.</p>
+<p><a href="{% url 'profile' %}">profile</a></p>
+<p><a href="{% url 'logout' %}">logout</a></p>
+{% else %}
 <a href="{% url 'login' %}">login</a> |
 <a href="{% url 'signup' %}">signup</a>
+{% endif %}
 {% endblock %}
